--- a/app/walkandplay/trunk/server/build.xml
+++ b/app/walkandplay/trunk/server/build.xml
@@ -165,7 +165,6 @@ $Id: build.xml,v 1.1 2006-04-16 15:04:44 just Exp $
 		<copy todir="${build.war.dir}/WEB-INF/bin" file="${keyworx.dir}/server/admin/exifdate.sh" overwrite="true"/>
 		<copy todir="${build.war.dir}/WEB-INF/data" overwrite="true">
 			<fileset dir="${home.data.dir}"/>
-
 		</copy>
 
 		<copy todir="${build.war.dir}/WEB-INF/lib" overwrite="true" >
@@ -209,8 +208,19 @@ $Id: build.xml,v 1.1 2006-04-16 15:04:44 just Exp $
 		 </copy>
 
 		<!-- Copy relevant GeoTracing JSP -->
-		<copy todir="${build.war.dir}/srv/" overwrite="true">
-			 <fileset dir="${geotracing.server.dir}/webapp/gt/srv">
+		<copy todir="${build.war.dir}" overwrite="true">
+			 <fileset dir="${geotracing.server.dir}/webapp/gt">
+				 <include name="lib/**" />
+				 <include name="map/**" />
+				 <include name="my/**" />
+				 <include name="srv/**" />
+			 </fileset>
+		 </copy>
+
+		<!-- Copy relevant WNP webapp files -->
+		<copy todir="${build.war.dir}" overwrite="true">
+			 <fileset dir="${home.webapp.dir}">
+				 <include name="lib/**" />
 			 </fileset>
 		 </copy>
 
