--- a/app/walkandplay/trunk/client/phone/etc/wp.properties
+++ b/app/walkandplay/trunk/client/phone/etc/wp.properties
@@ -1,7 +1,8 @@
 pundit.url=www.walkandplay.com/wp
 sumatra.url=test.walkandplay.com/wp
 wp.options=full
-# gps.sample.interval=200000 (sample itnerval in millis)
+gps.sample.interval=3000
+gps.send.interval=5000
 
 
 
