--- a/app/walkandplay/trunk/client/phone/build.xml
+++ b/app/walkandplay/trunk/client/phone/build.xml
@@ -263,9 +263,7 @@
 					<attribute name="MIDlet-Permissions-Opt" value="javax.microedition.io.Connector.bluetooth.client,javax.microedition.media.control.VideoControl.getSnapshot" />
 					<attribute name="kw-url" value="http://test.walkandplay.com/wp" />					
 					<attribute name="kw-timeout" value="20" />
-					<!--<attribute name="kw-user" value="jan@waag.org" />-->
-					<attribute name="kw-user" value="geoapp-user" />
-					<!--<attribute name="kw-password" value="johan" />-->
+					<attribute name="kw-user" value="red2" />
 					<attribute name="kw-password" value="user" />
 					<attribute name="kw-amulet" value="mlgkamulet" />
 					<attribute name="kw-port" value="6000" />
