wnp: further server playhandler stuff

--- a/app/walkandplay/trunk/server/build.properties
+++ b/app/walkandplay/trunk/server/build.properties
@@ -7,7 +7,7 @@ version=1.0.0
 
 # your PATH must point to the bin where the Jikes compiler is
 # build.compiler=jikes
-javac.debug=false
+javac.debug=true
 javac.deprecation=false
 javac.optimize=true
 
