--- a/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
+++ b/app/diwi/trunk/client/mobile/Diwi/Diwi.csproj
@@ -56,6 +56,9 @@
   <ItemGroup>
     <Compile Include="AppController.cs" />
     <Compile Include="DiwiUIStaticText.cs" />
+    <Compile Include="MakePhotoPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MediaHandler.cs" />
     <Compile Include="RouteInfoPage.cs">
       <SubType>Form</SubType>
