--- a/base/trunk/server/build.properties
+++ b/base/trunk/server/build.properties
@@ -2,6 +2,7 @@
 
 # your PATH must point to the bin where the Jikes compiler is
 build.compiler=jikes
+javac.debug=true
 
 war.name=gt
 deploy.local.dir=/var/keyworx/webapps/test.geotracing.com
