wnp: further gameplay impl

--- a/app/walkandplay/trunk/server/build.xml
+++ b/app/walkandplay/trunk/server/build.xml
@@ -251,6 +251,10 @@ $Id: build.xml,v 1.1 2006-04-16 15:04:44 just Exp $
 			</filterchain>
 		</concat>
 
+		<!-- Replace users/passwords with local values as not to have them in repository -->
+		<replace file="${build.war.dir}/WEB-INF/cfg/portal.xml"
+				 replacefilterfile="${home}/security.properties" summary="true"/>
+
 		<!-- Finally make war -->
 		<jar jarfile="${project.war}">
 			<fileset dir="${build.war.dir}">
